# v4r_ros_wrappers

camera_tracker/src/: camera_tracker.cpp
camera_tracker_srv_definitions/: CMakeLists.txt
multiview_object_recognizer/: CMakeLists.txt  package.xml
multiview_object_recognizer/include/: multiview_object_recognizer_ros.h
multiview_object_recognizer/src/: multiview_object_recognizer_ros.cpp  test_multiview_recognizer.cpp
semantic_changes_visual/: CMakeLists.txt  package.xml  plugin_description.xml
semantic_changes_visual/include/: ChangeDetectionBridge.h  ObjectDetectionBridge.h  change_display.h
semantic_changes_visual/include/semantic_changes_visual/: ChangeDetectionBridge.h  bb_display.h  change_display.h
semantic_changes_visual/msg/: ChangedScene.msg  MoveChange.msg  ObjectLabel.msg  SimpleChange.msg
semantic_changes_visual/src/: bb_display.cpp  change_detection.cpp  change_display.cpp  change_display.cpp.autosave  change_display.h  test_change_detection.cpp  test_publisher.cpp
semantic_changes_visual/srv/: get_removed_objects.srv
singleview_object_recognizer/src/: recognizer_ros.cpp
