<package>
  <name>semantic_changes_visual</name>
  <version>0.9.1</version>
  <description>
     Visualisation of semantic changes.
  </description>
  <maintainer email="ivelas@fit.vutbr.cz">Martin Velas</maintainer>
  <license>BSD</license>

  <author>Martin Velas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rviz</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
